Resolves #1374 Collections: Modify existing new/edit view to include partials for new tabs

--- a/config/locales/hyrax.en.yml
+++ b/config/locales/hyrax.en.yml
@@ -402,9 +402,13 @@ en:
         header: "Edit Collection: %{title}"
       form:
         tabs:
+          branding: "Branding"
           description: "Description"
-          sharing:     "Sharing"
-          discovery:   "Discovery"
+          discovery: "Discovery"
+          relationships: "Relationships"
+          sharing: "Sharing"
+          visibility: "Visibility"
+          workflow: "Workflow"
       form_discovery:
           open:
             label:         "Open Access"
